--- a/ME/CZX/View/ScoreTableViewCell.xib
+++ b/ME/CZX/View/ScoreTableViewCell.xib
@@ -13,6 +13,13 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I8j-Bg-uaB">
+                        <rect key="frame" x="52" y="0.0" width="268" height="50"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <state key="normal">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lvd-xt-jOH">
                         <rect key="frame" x="10" y="3" width="42" height="42"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -66,13 +73,13 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I8j-Bg-uaB">
-                        <rect key="frame" x="52" y="0.0" width="268" height="50"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hw3-qZ-W7K">
+                        <rect key="frame" x="60" y="20" width="180" height="20"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <state key="normal">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                    </button>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </tableViewCellContentView>
             <connections>
@@ -80,6 +87,7 @@
                 <outlet property="headView" destination="lvd-xt-jOH" id="F9R-WM-0gG"/>
                 <outlet property="imageBtn" destination="8Nu-SJ-ixr" id="4IJ-YC-CSW"/>
                 <outlet property="nameLa" destination="vd6-wO-pdb" id="48C-ZS-jNS"/>
+                <outlet property="powerLa" destination="hw3-qZ-W7K" id="KWh-Mu-5ak"/>
                 <outlet property="rankingLa" destination="tuC-ku-DAZ" id="Ba7-T8-J8C"/>
                 <outlet property="scoreLa" destination="zIr-mn-K2i" id="XwA-Sh-HdW"/>
                 <outlet property="timeLa" destination="G9J-SC-C96" id="qPP-T5-HZA"/>
