新的数据处理形式 获取一个人的详情 从DetailViewController  改为                 －》UserCenterViewController        使用方法- (id)initWithUserId:(NSString *)userId andStyle:(UITableViewStyle)style; 进行初始化
User类    获取相应数据 方式改变
例如  ccourses
   现在要用   [_user.info.ccourses linkContent];来获取

--- a/ME/ZHZ/个人中心/login/LoginViewController.xib
+++ b/ME/ZHZ/个人中心/login/LoginViewController.xib
@@ -59,7 +59,7 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="register:" destination="-1" eventType="touchUpInside" id="Ms4-QM-EvZ"/>
+                        <action selector="userRegister:" destination="-1" eventType="touchUpInside" id="Tog-u0-mIs"/>
                     </connections>
                 </button>
                 <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JDg-pE-MCN">
