--- a/ME/ZHZ/User.storyboard
+++ b/ME/ZHZ/User.storyboard
@@ -15,20 +15,30 @@
                         <sections>
                             <tableViewSection id="Z43-J0-azT">
                                 <cells>
-                                    <tableViewCell appearanceType="aqua" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="46" id="TNX-K3-hPK">
-                                        <rect key="frame" x="0.0" y="99" width="320" height="46"/>
+                                    <tableViewCell appearanceType="aqua" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="100" id="TNX-K3-hPK">
+                                        <rect key="frame" x="0.0" y="99" width="320" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TNX-K3-hPK" id="ZXH-jX-leX">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MmL-cb-3Zm">
+                                                    <rect key="frame" x="104" y="0.0" width="100" height="100"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" backgroundImage="CuserPhoto.png">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                            </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.90196079015731812" green="0.90196079015731812" blue="0.90196079015731812" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
                             <tableViewSection id="K2o-D0-U8x">
                                 <cells>
                                     <tableViewCell appearanceType="aqua" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="YCe-8B-LRs" rowHeight="46" style="IBUITableViewCellStyleDefault" id="D54-VK-hgW">
-                                        <rect key="frame" x="0.0" y="165" width="320" height="46"/>
+                                        <rect key="frame" x="0.0" y="219" width="320" height="46"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="D54-VK-hgW" id="VXE-2O-xgo">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
@@ -45,7 +55,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="nkM-jT-SdW">
-                                        <rect key="frame" x="0.0" y="211" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="265" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nkM-jT-SdW" id="wBj-5q-UHp">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -57,7 +67,7 @@
                             <tableViewSection id="7zc-fQ-D5m">
                                 <cells>
                                     <tableViewCell appearanceType="aqua" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="ZHk-Tc-KM7" rowHeight="46" style="IBUITableViewCellStyleDefault" id="hRr-TU-51h">
-                                        <rect key="frame" x="0.0" y="275" width="320" height="46"/>
+                                        <rect key="frame" x="0.0" y="329" width="320" height="46"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hRr-TU-51h" id="GdA-p4-wqN">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
@@ -128,6 +138,9 @@
             <point key="canvasLocation" x="-165" y="62"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="CuserPhoto.png" width="80" height="80"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
